--- a/pytest.ini
+++ b/pytest.ini
@@ -10,7 +10,7 @@ python_classes = Test* *Test *Tests
 # Collection optimization
 norecursedirs = .git .tox dist build *.egg .venv __pycache__ .mypy_cache .pytest_cache .ruff_cache
 
-# Output formatting
+# Output formatting - minimal for faster feedback
 addopts = 
     --tb=short
     --strict-markers
@@ -21,7 +21,6 @@ addopts =
     --maxfail=10
     --durations=10
     --showlocals
-    --import-mode=importlib
 
 # Core markers - organized and de-duplicated
 markers =
@@ -69,6 +68,10 @@ markers =
     database: marks tests requiring database connection
     mcp: marks tests related to Model Context Protocol
     deployment: marks tests as deployment tests
+    environment: marks tests as environment validation tests
+    infrastructure: marks tests as infrastructure validation tests
+    rate_limit: marks tests as rate limiting tests
+    pipeline: marks tests as CI/CD pipeline tests
     
     # Monitoring and operations
     browser_monitoring: marks tests for browser automation monitoring
