--- a/.github/workflows/shared/matrix-config.yml
+++ b/.github/workflows/shared/matrix-config.yml
@@ -1,42 +1,77 @@
-# Shared matrix configuration for workflows
-# This file defines optimized test matrices to reduce CI time while maintaining coverage
+# Shared matrix configuration for optimized workflows
+# This file defines smart test matrices to minimize CI time while maximizing coverage
 
-# Fast matrix for pull requests (minimal but effective coverage)
-fast-matrix:
+# Ultra-fast matrix for PR validation (< 5 minutes)
+ultra-fast-matrix:
   os: [ubuntu-latest]
-  python-version: ['3.13']
+  python-version: ['3.12']
+  test-type: ['critical']
+
+# PR matrix for comprehensive but efficient testing (< 10 minutes)
+pr-matrix:
+  os: [ubuntu-latest]
+  python-version: ['3.12']
   include:
     - os: ubuntu-latest
-      python-version: '3.13'
+      python-version: '3.12'
       coverage: true
-      browser-tests: true
+      test-type: 'pr'
 
-# Full matrix for main branch (comprehensive testing)
-full-matrix:
+# Main branch matrix for full regression testing (< 20 minutes)
+main-matrix:
   os: [ubuntu-latest, windows-latest, macos-latest]
-  python-version: ['3.11', '3.12', '3.13']
+  python-version: ['3.11', '3.12']
   exclude:
-    # Reduce matrix size while maintaining good coverage
+    # Strategic exclusions to reduce matrix size
     - os: windows-latest
       python-version: '3.11'
     - os: macos-latest
       python-version: '3.11'
   include:
-    - os: ubuntu-latest
-      python-version: '3.13'
-      coverage: true
-      browser-tests: true
+    # Full coverage on Ubuntu with Python 3.12
     - os: ubuntu-latest
       python-version: '3.12'
-      browser-tests: true
+      coverage: true
+      test-type: 'full'
+    # Compatibility testing on Ubuntu with Python 3.11
+    - os: ubuntu-latest
+      python-version: '3.11'
+      coverage: false
+      test-type: 'full'
+    # Core functionality testing on other platforms
+    - os: windows-latest
+      python-version: '3.12'
+      coverage: false
+      test-type: 'core'
+    - os: macos-latest
+      python-version: '3.12'
+      coverage: false
+      test-type: 'core'
 
-# Minimal matrix for dependency updates (just check compatibility)
+# Performance testing matrix (Linux only for consistent results)
+performance-matrix:
+  os: [ubuntu-latest]
+  python-version: ['3.11', '3.12']
+  benchmark-suite: ['config', 'core', 'integration']
+
+# Security scanning matrix (minimal but thorough)
+security-matrix:
+  os: [ubuntu-latest]
+  python-version: ['3.12']
+
+# Dependency compatibility matrix
 dependency-matrix:
   os: [ubuntu-latest]
-  python-version: ['3.13']
+  python-version: ['3.12']
 
 # Browser testing matrix (only where needed)
 browser-matrix:
   os: [ubuntu-latest]  # Only test browsers on Linux for speed
-  python-version: ['3.13']
+  python-version: ['3.12']
   browser: [chromium]  # Only test one browser for faster CI
+
+# Docker testing matrix
+docker-matrix:
+  os: [ubuntu-latest]
+  python-version: ['3.12']
+  image-type: ['app', 'worker']
