--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ dependencies = [
     "scikit-learn>=1.7.0",
     "httpx>=0.28.1",
     "opentelemetry-instrumentation-fastapi>=0.55b1",
+    "pytest-benchmark>=5.1.0",
 ]
 
 [project.optional-dependencies]
@@ -675,6 +676,7 @@ dev = [
     "safety>=3.2.4",
     "semgrep>=1.79.0",
     "pylint>=3.3.7",
+    "pytest-timeout>=2.4.0",
 ]
 
 # ===== Production-Ready Pylint Configuration =====
