refactor(ci): standardize tool installation and cleanup deprecated configs
- Replace pip with uv tool in zero-maintenance-automation workflow
- Remove deprecated CI workflow files (config-deployment-refactored.yml, optimized-ci.yml)
- Relocate CI migration guides to docs/developers/ci/
- Clean up temporary modernization files
- Remove redundant pytest configuration

Improves consistency with uv-based toolchain and reduces CI configuration bloat.

--- a/.github/workflows/zero-maintenance-automation.yml
+++ b/.github/workflows/zero-maintenance-automation.yml
@@ -108,7 +108,9 @@ jobs:
           echo "Running security scans..."
           
           # Install security tools
-          pip install pip-audit bandit safety
+          uv tool install pip-audit
+          uv tool install bandit  
+          uv tool install safety
           
           # Audit dependencies for known vulnerabilities
           echo "Scanning for dependency vulnerabilities..."
