chore: update .gitignore with temporary file patterns
- Added patterns for temporary report files (*_REPORT.md)
- Added patterns for fix and validation reports
- Added patterns for SUBAGENT and TEST reports
- Added patterns for temporary analysis files (current_*.txt/json)
- Added patterns for Docker temporary files
- Added patterns for build solution documents

--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,28 @@ dev-debug.log
 !src/models/
 ruff_errors.json
 security_validation_report_*.json
+
+# Temporary report files
+*_REPORT.md
+*_FIX_REPORT.md
+*_VALIDATION_REPORT.md
+*_CLEANUP_REPORT.md
+*_RESOLUTION_REPORT.md
+*_MIGRATION_REPORT.md
+SUBAGENT_*.md
+TEST_COLLECTION_REPORT.md
+TEST_INFRASTRUCTURE_*.md
+
+# Temporary analysis files
+current_*.txt
+current_*.json
+performance_validation_report.md
+
+# Docker temporary files
+Dockerfile.fixed
+Dockerfile.tmp
+Dockerfile.bak
+
+# Build solutions and temporary docs
+*_BUILD_SOLUTION.md
+DOCKER_BUILD_*.md
