--- a/pytest.ini
+++ b/pytest.ini
@@ -103,6 +103,9 @@ markers =
     contract: marks tests as contract tests
     benchmark: marks tests as benchmark tests
     smoke: marks tests as smoke tests
+
+    # Test isolation helpers
+    isolated: marks tests requiring xdist-aware isolation fixtures
     
     # AI/ML specific
     ai: marks tests as AI/ML specific
