--- a/.github/actions/detect-changes/action.yml
+++ b/.github/actions/detect-changes/action.yml
@@ -41,7 +41,7 @@ runs:
   using: "composite"
   steps:
     - name: Detect configuration changes
-      uses: dorny/paths-filter@v3.0.2
+      uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
       id: changes
       with:
         filters: |
