--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -19,17 +19,17 @@ jobs:
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v5
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
       - name: Label PR based on files changed
-        uses: actions/labeler@v6.0.1
+        uses: actions/labeler@634933edcd8ababfe52f92936142cc22ac488b1b # v6.0.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           configuration-path: .github/labeler.yml
           sync-labels: true
 
       - name: Label PR based on size
-        uses: codelytv/pr-size-labeler@v1.10.3
+        uses: codelytv/pr-size-labeler@4ec67706cd878fbc1c8db0a5dcd28b6bb412e85a # v1.10.3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           xs_label: 'size/xs'
@@ -45,7 +45,7 @@ jobs:
             This PR is very large. Consider breaking it into smaller PRs for easier review.
 
       - name: Auto-label based on PR title
-        uses: actions/github-script@v8
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
         with:
           script: |
             const title = context.payload.pull_request.title.toLowerCase();
@@ -104,7 +104,7 @@ jobs:
     
     steps:
       - name: Auto-label based on issue title and body
-        uses: actions/github-script@v8
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
         with:
           script: |
             const title = context.payload.issue.title.toLowerCase();
@@ -194,7 +194,7 @@ jobs:
     
     steps:
       - name: Auto-assign PR to author
-        uses: actions/github-script@v8
+        uses: actions/github-script@ed597411d8f924073f98dfc5c65a23a2325f34cd # v8
         with:
           script: |
             // Auto-assign PR to the author
