--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -90,21 +90,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
-        
-      - name: Set up Python
-        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6
-        with:
-          python-version: '3.13'
-          
-      - name: Install uv
-        uses: astral-sh/setup-uv@b75a909f75acd358c2196fb9a5f1299a9a8868a4 # v6.7.0
-        with:
-          version: "0.8.19"
-          enable-cache: true
-          
-      - name: Install dependencies
-        run: |
-          uv sync --dev --frozen
+
+      - name: Setup environment
+        uses: ./.github/actions/setup-environment
           
       - name: Validate documentation links
         run: |
@@ -164,20 +152,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
 
-      - name: Set up Python
-        uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6
-        with:
-          python-version: '3.13'
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@b75a909f75acd358c2196fb9a5f1299a9a8868a4 # v6.7.0
-        with:
-          version: "0.8.19"
-          enable-cache: true
-
-      - name: Install dependencies
-        run: |
-          uv sync --dev --frozen
+      - name: Setup environment
+        uses: ./.github/actions/setup-environment
 
       - name: Install documentation tools
         run: |
